Closed
Bug 1671162
Opened 4 years ago
Closed 4 years ago
Change the debug assertion for ensure the browsing context is not discarded in SessionStorage::StableStateCallback to if-check
Categories
(Core :: Storage: localStorage & sessionStorage, defect)
Core
Storage: localStorage & sessionStorage
Tracking
()
RESOLVED
FIXED
83 Branch
Tracking | Status | |
---|---|---|
firefox83 | --- | fixed |
People
(Reporter: tt, Assigned: tt)
References
Details
Attachments
(1 file)
Valetin hit this debug assertion by loading google.com in a new tab, then closing it.
We only scheduled a stable state callback to checkpoint SessionStorage data when there is a browsing context and the browsing context hasn't been discarded.
I was thinking since we have checked this there so that some conditions should still be valid while executing the callback. However, after this STR and rethink about this, this actually not true.
We should check whether the browsing context still exists and it hasn't been discarded whlie executing the callback.
Assignee | ||
Updated•4 years ago
|
Summary: Change the assertion for ensure the browsing context is not discarded in SessionStorage::StableStateCallback → Change the debug assertion for ensure the browsing context is not discarded in SessionStorage::StableStateCallback to if-check
Assignee | ||
Comment 1•4 years ago
|
||
Pushed by ttung@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/686da4667087
Checkpoint SessionStorage data in stable state callbacks only when the browsing context hasn't been discarded; r=janv,dom-workers-and-storage-reviewers
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•