Bug 1671162 - Checkpoint SessionStorage data in stable state callbacks only when the browsing context hasn't been discarded; r=janv,dom-workers-and-storage-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D93490